Revert "Fix unwanted clipping of upload button"
This reverts commit 0b63eaed51284f92298944df72f77e4e4be52e23.

--- a/app/styles/elements/_buttons.scss
+++ b/app/styles/elements/_buttons.scss
@@ -162,6 +162,7 @@ input[type="button"].btn-block,
 // http://www.abeautifulsite.net/whipping-file-inputs-into-shape-with-bootstrap-3/
 .btn-file {
   position: relative;
+  overflow: hidden;
   @media (max-width:$screen-s-max) {
     padding: 9px 12px;
   }
